<resources>
    <string name="app_name">JustLook</string>
    <!--侧滑菜单条目-->
    <string name="zhihu_daliy">知乎日报</string>
    <string name="bookmark">收藏</string>
    <string name="theme">主题</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <!--设置Toolbar左侧菜单所需参数-->
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="loading">"正在努力加载中..."</string>
    <string name="access_net_fail">"访问网络异常"</string>
    <string name="net_data_exception">"网络数据异常"</string>
    <string name="no_connection">无网络</string>
    <string name="exit">再按一次退出</string>
    <string name="title_activity_settings">Settings</string>

    <string name="author">作者</string>
    <string name="version">版本:V1.0</string>
    <string name="me">与神跳舞</string>
    <string name="location">上海</string>
    <string name="github">GitHub</string>
    <string name="me_github">https://github.com/shizhen5452</string>
    <string name="me_blog">http://blog.csdn.net/guasz</string>
    <string name="blog">博客</string>
    <string name="me_email">shizhen5452@gmail.com</string>
    <string name="email">邮箱</string>
    <string name="clear_cache">清理缓存</string>
    <string name="current_cache">当前缓存</string>
    <string name="night_mode">夜间模式</string>
    <string name="switch_night_mode">切换夜间模式</string>

</resources>
