<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        />

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/version"
        android:textColor="@color/md_black_1000"
        />

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/author"
        android:textColor="?attr/colorPrimary"
        />

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/me"
        android:textColor="@color/md_black_1000"
        />

    <TextView
        style="@style/ItemSummaryStyle"
        android:text="@string/location"
        />

    <include layout="@layout/view_gap"/>

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/github"
        android:textColor="@color/md_black_1000"
        />

    <TextView
        android:id="@+id/tv_github"
        style="@style/ItemSummaryStyle"
        android:autoLink="web"
        android:text="@string/me_github"
        />

    <include layout="@layout/view_gap"/>

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/blog"
        android:textColor="@color/md_black_1000"
        />

    <TextView
        style="@style/ItemSummaryStyle"
        android:autoLink="web"
        android:text="@string/me_blog"
        />

    <include layout="@layout/view_gap"/>

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/email"
        android:textColor="@color/md_black_1000"
        />

    <TextView
        style="@style/ItemSummaryStyle"
        android:autoLink="email"
        android:text="@string/me_email"
        />

</LinearLayout>