<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/clear_cache"
        android:textColor="?attr/colorPrimary"
        />

    <RelativeLayout
        android:id="@+id/rl_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_cache"
            android:textColor="@color/md_black_1000"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0k"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <include layout="@layout/view_gap"/>

    <TextView
        style="@style/ItemTitleStyle"
        android:text="@string/night_mode"
        android:textColor="?attr/colorPrimary"
        />

    <RelativeLayout
        android:id="@+id/rl_night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_night_mode"
            android:textColor="@color/md_black_1000"
            android:layout_centerVertical="true"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <include layout="@layout/view_gap"/>
</LinearLayout>